# udemy-ml-in-production-follow

./: Makefile  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: runner.py
src/config/: .env  __init__.py  db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_service.py
src/model/models/: rf_db_v3
src/model/pipeline/: collection.py  model.py  preparation.py
